# bufkit

./: .codecov.yml  CHANGELOG.md  Cargo.toml  README-zh_CN.md  README.md
.github/workflows/: ci.yml  loc.yml
examples/: buf_mut.rs  chunk_mut.rs  chunk_writer.rs  write_buf.rs
src/: buf.rs  buf_mut.rs  chunk.rs  chunk_mut.rs  error.rs  lib.rs  read_buf.rs  write_buf.rs
src/buf/: peeker.rs  ref_peeker.rs
src/buf_mut/: putter.rs
src/chunk/: peeker.rs  ref_peeker.rs
src/chunk_mut/: putter.rs
tests/: bytes_buf.rs  bytes_mut_buf_mut.rs  deref_buf_mut.rs  vec_buf_mut.rs
