[package]
name = "bufkit"
version = "0.0.0"
edition = "2024"
repository = "https://github.com/al8n/bufkit"
homepage = "https://github.com/al8n/bufkit"
documentation = "https://docs.rs/bufkit"
description = "A template for creating Rust open-source repo on GitHub"
license = "MIT OR Apache-2.0"
rust-version = "1.85.0"

[[bench]]
path = "benches/foo.rs"
name = "foo"
harness = false

[features]
default = ["std"]
alloc = []
std = ["thiserror/default", "varing?/default", "bytes_1?/default"]

[dependencies]
thiserror = { version = "2", default-features = false }
paste = "1"

bytes_1 = { package = "bytes", version = "1", default-features = false, optional = true }
varing = { version = "0.5", default-features = false, optional = true }

[dev-dependencies]
criterion = "0.7"
tempfile = "3"

[profile.bench]
opt-level = 3
debug = false
codegen-units = 1
lto = 'thin'
incremental = false
debug-assertions = false
overflow-checks = false
rpath = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints.rust]
rust_2018_idioms = "warn"
single_use_lifetimes = "warn"
unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(all_tests)',
] }
