[package]
name = "bufkit"
version = "0.3.3"
edition = "2021"
repository = "https://github.com/al8n/bufkit"
homepage = "https://github.com/al8n/bufkit"
documentation = "https://docs.rs/bufkit"
description = "Providing `Buf` and `BufMut` for working with byte buffers. `bufkit` focuses on predictable memory usage and comprehensive error handling."
license = "MIT OR Apache-2.0"
rust-version = "1.81.0"
keywords = ["buf", "bufmut", "bufio"]
categories = ["no-std", "no-std::no-alloc", "network-programming"]

[features]
default = ["std"]
alloc = []
std = ["thiserror/default", "varing?/default", "bytes_1?/default"]

[dependencies]
thiserror = { version = "2", default-features = false }
paste = "1"

bytes_1 = { package = "bytes", version = "1", default-features = false, optional = true }
varing = { version = "0.9", default-features = false, optional = true }

[dev-dependencies]
criterion = "0.7"

[profile.bench]
opt-level = 3
debug = false
codegen-units = 1
lto = 'thin'
incremental = false
debug-assertions = false
overflow-checks = false
rpath = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints.rust]
rust_2018_idioms = "warn"
single_use_lifetimes = "warn"
unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(all_tests)',
] }
